<!--
Copyright (C) 2016-2017 V12 Technology Limited. All rights reserved. 

This software is subject to the terms and conditions of its EULA, defined in the
file "LICENCE.txt" and distributed with this software. All information contained
herein is, and remains the property of V12 Technology Limited and its licensors, 
if any. This source code may be protected by patents and patents pending and is 
also protected by trade secret and copyright law. Dissemination or reproduction 
of this material is strictly forbidden unless prior written permission is 
obtained from V12 Technology Limited.  
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.fluxtion.extension</groupId>
    <artifactId>streaming-pom</artifactId>
    <version>2.10.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>fluxtion :: ext :: streaming</name>
    <modules>
        <module>api</module>
        <module>builder</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.deploy.skip>true</maven.deploy.skip>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
</project>
